--- a/pages/main_page/auth.css
+++ b/pages/main_page/auth.css
@@ -1,5 +1,8 @@
 .auth-popup {
-    display: none;
+    /* display: none; */
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
 }
 
 .auth-popup__background {
