--- a/assets/styles/components/event-card/event-card.css
+++ b/assets/styles/components/event-card/event-card.css
@@ -102,8 +102,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    width: 60%;
     align-items: flex-start;
+    margin-top: 16px;
 }
 
 .event__card-bottom .text-md {
@@ -116,14 +116,8 @@
     gap: 8px;
     color: var(--text00-color);
 }
-
-.event__card.last .text-lg {
-    color: var(--primary-color);
-    font-weight: 500;
-}
-
-.event__card.last .text-sm {
-    color: var(--text01-color);
+.event__card.last{
+    gap: 8px;
 }
 
 .event__card.last .main__button {
