--- a/assets/styles/components/event-card/event-card.css
+++ b/assets/styles/components/event-card/event-card.css
@@ -105,7 +105,12 @@
     align-items: flex-start;
     margin-top: 16px;
 }
-
+.event__card-bottom .main__button {
+    margin-top: 8px;
+}
+.event__card-info{
+    margin-top: 8px;
+}
 .event__card-bottom .text-md {
     font-weight: 500;
 }
@@ -131,6 +136,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-top: 8px;
+    width: 100%;
 }
 
 .event__card-features-items {
