--- a/pages/lk_events/lk_events.css
+++ b/pages/lk_events/lk_events.css
@@ -6,6 +6,8 @@
     width: 100%;
     height: 640px;
     text-align: center;
+    background: white;
+    border-radius: 16px;
 }
 
 .profile-right.empty .main__button {
