ЛК Создание мероприятий

--- a/pages/lk_org_events/lk_org_events.css
+++ b/pages/lk_org_events/lk_org_events.css
@@ -308,7 +308,9 @@
     gap: 16px;
     margin-top: 24px;
 }
-
+.profile-add-item-select{
+    padding: 16px;
+}
 
 .check-report__item {
     background-color: var(--base00-color);
