ЛК Баллы и рейтинг

--- a/pages/lk_score_and_rating/lk_scode_and_rating.css
+++ b/pages/lk_score_and_rating/lk_scode_and_rating.css
@@ -38,6 +38,7 @@
     flex-direction: column;
     gap: 16px;
     overflow: auto;
+    max-height: 400px;
 }
 .some-popup-score-item{
     display: flex;
@@ -80,7 +81,11 @@
     max-height: 350px;
     overflow: auto;
 }
-
+@media (max-width:800px) {
+.some-popup-score-items{
+    max-height: unset;
+}
+}
 @media (max-width:600px) {
     .some-popup-score-btn{
         display: block;
