Фикс истории баллов

--- a/pages/lk_score_and_rating/lk_scode_and_rating.css
+++ b/pages/lk_score_and_rating/lk_scode_and_rating.css
@@ -82,6 +82,9 @@
     overflow: auto;
 }
 @media (max-width:800px) {
+.some-popup-score__and__history-text{
+    max-height: unset;
+}
 .some-popup-score-items{
     max-height: unset;
 }
