Фикс шрифта Васек на главной

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -15,7 +15,10 @@
     align-items: center;
 
 }
-
+.header-logo{
+    display: flex;
+    max-width: 180px;
+}
 .header-item {
     font-weight: 500;
     color: var(--text00-color);
