--- a/pages/lk_reports/lk_reports.css
+++ b/pages/lk_reports/lk_reports.css
@@ -307,6 +307,10 @@
     gap: 8px;
 }
 
+.send-report__file-area-files-list_hidden {
+    display: none;
+}
+
 .send-report__file-area-files-list-item-box-close {
     position: absolute;
     top: 5px;
@@ -321,12 +325,15 @@
     align-items: center;
     position: relative;
     border-radius: 8px;
+    overflow: hidden;
 }
+
+.send-report__file-area-files-list
 
 .send-report__file-area-files-list-item-box .send-report__file-area-files-list-item-img {
     min-width: 100%;
-    height: auto;
-    min-height: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .send-report__file-area-label-area_hidden {
@@ -336,7 +343,18 @@
 .send-report__file-area-files-list-item-box_add {
     background-color: #F6F8FC;
     cursor: pointer;
+    position: relative;
 }
+
+.send-report__file-area-files-list-item-box_add-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0;
+}   
 
 
 #send-report__file {
@@ -357,7 +375,6 @@
     display: flex;
     background-color: #EFE9FF;
 }
-
 #drop-area.highlight {
     background-color: black;
 }
