task/BASH-43 Фикс ЛК инцидентов

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -572,6 +572,7 @@ button{
     border-radius: 8px;
     background: var(--base00-color);
     border: none;
+    cursor: pointer;
 }
 
 .universal__select-inside {
